# diskrune

./: .gitignore  LICENSE  README.md  diskrune_template.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  node.rs  scanner.rs
