[package]
name = "diskrune"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Fast disk space analyzer with parallel scanning"
license = "MIT"
authors = ["Wiscale France"]

[lib]
name = "diskrune_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rayon        = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
